Add basic unit test coverage

--- a/arrows/pdal/tests/CMakeLists.txt
+++ b/arrows/pdal/tests/CMakeLists.txt
@@ -4,8 +4,9 @@ set(CMAKE_FOLDER "Arrows/PDAL/Tests")
 
 include(kwiver-test-setup)
 
-set(test_libraries      vital vital_vpm kwiver_algo_pdal )
+set(test_libraries      kwiver_algo_pdal kwiver_algo_proj )
 
 ##############################
 # Algorithms PDAL tests
 ##############################
+kwiver_discover_gtests(pdal pointcloud_io  LIBRARIES ${test_libraries} ARGUMENTS "${kwiver_test_data_directory}")
