Add KLV ST1607 parser

--- a/arrows/klv/CMakeLists.txt
+++ b/arrows/klv/CMakeLists.txt
@@ -43,6 +43,7 @@ set( sources
   klv_1108_metric_set.cxx
   klv_1204.cxx
   klv_1602.cxx
+  klv_1607.cxx
   misp_time.cxx
   )
 
@@ -82,6 +83,7 @@ set( public_headers
   klv_1108_metric_set.h
   klv_1204.h
   klv_1602.h
+  klv_1607.h
   misp_time.h
   )
 
