--- a/arrows/klv/tests/CMakeLists.txt
+++ b/arrows/klv/tests/CMakeLists.txt
@@ -24,3 +24,4 @@ kwiver_discover_gtests( klv klv_1010            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_1108            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_1108_metric_set LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_1602            LIBRARIES ${test_libraries} )
+kwiver_discover_gtests( klv klv_1607            LIBRARIES ${test_libraries} )
