--- a/arrows/pdal/pdal_config.h.in
+++ b/arrows/pdal/pdal_config.h.in
@@ -1,6 +1,6 @@
-// This file is part of TeleSculptor, and is distributed under the
+// This file is part of KWIVER, and is distributed under the
 // OSI-approved BSD 3-Clause License. See top-level LICENSE file or
-// https://github.com/Kitware/TeleSculptor/blob/master/LICENSE for details.
+// https://github.com/Kitware/kwiver/blob/master/LICENSE for details.
 
 /**
  * \file
