--- a/vital/util/CMakeLists.txt
+++ b/vital/util/CMakeLists.txt
@@ -35,6 +35,10 @@ set( public_headers
   token_type_sysenv.h
   tokenize.h
   transform_image.h
+  variant/config.hpp
+  variant/in_place.hpp
+  variant/lib.hpp
+  variant/variant.hpp
   wrap_text_block.h
   file_md5.h
   )
