--- a/arrows/vtk/applets/CMakeLists.txt
+++ b/arrows/vtk/applets/CMakeLists.txt
@@ -44,6 +44,8 @@ kwiver_add_plugin( kwiver_algo_vtk_applets
                ${VTK_targets}
   )
 
-target_link_libraries( kwiver_algo_vtk_applets
-  PRIVATE              kwiver_algo_pdal
-  )
+if ( KWIVER_ENABLE_PDAL )
+  target_link_libraries( kwiver_algo_vtk_applets
+    PRIVATE              kwiver_algo_pdal
+    )
+endif ( KWIVER_ENABLE_PDAL )
