--- a/CMake/kwiver_config.h.in
+++ b/CMake/kwiver_config.h.in
@@ -2,12 +2,8 @@
 // OSI-approved BSD 3-Clause License. See top-level LICENSE file or
 // https://github.com/Kitware/kwiver/blob/master/LICENSE for details.
 
-/**
- * \file
- *
- * \brief Macros and symbols for KWIVER
- *
- */
+/// \file
+/// \brief Macros and symbols for KWIVER
 
 #ifndef KWIVER_CONFIG_H
 #define KWIVER_CONFIG_H
