--- a/arrows/mvg/applets/CMakeLists.txt
+++ b/arrows/mvg/applets/CMakeLists.txt
@@ -18,6 +18,11 @@ set( headers
 # Add our plugin path to the default list
 include_directories( ${CMAKE_CURRENT_BINARY_DIR} )
 
+if (KWIVER_ENABLE_TESTS)
+  add_subdirectory(tests)
+  list(APPEND kwiver_plugin_applets_subdir tests)
+endif()
+
 # Add applet plugin
 kwiver_add_plugin( kwiver_algo_mvg_applets
   SUBDIR       ${kwiver_plugin_applets_subdir}
