mesh_coloration does not modify input.

--- a/config/applets/color_mesh.conf
+++ b/config/applets/color_mesh.conf
@@ -4,7 +4,8 @@
 # A frame is chosen if frame mod `sampling' == 0
 frame_sampling = 1
 
-# Set color from frame
+# Set color from frame. If frame = -1 it will use all frames with
+# frame mode frame_sampling == 0.
 frame = 1
 
 # Compute the average color or colors for all frames
@@ -16,8 +17,11 @@ all_frames = false
 # Default value is 1, bigger values will remove more points.
 occlusion_threshold = 1
 
-# Remove occluded points if parameter is true.
+# Do not color occluded points if parameter is true.
 remove_occluded = true
 
-# Remove masked points if parameter is true.
+# Do not color masked points if parameter is true.
 remove_masked = true
+
+# Remove points that are not colored.
+remove_not_colored = false
