Add unit tests for local_geo_cs io

--- a/vital/tests/CMakeLists.txt
+++ b/vital/tests/CMakeLists.txt
@@ -4,7 +4,7 @@ set(CMAKE_FOLDER "Vital/Tests")
 
 include(kwiver-test-setup)
 
-set( test_libraries vital vital_vpm vital_algo )
+set( test_libraries vital vital_vpm vital_algo kwiver_algo_proj )
 
 ##############################
 # Core tests
@@ -42,6 +42,7 @@ kwiver_discover_gtests(vital image_container_set            LIBRARIES ${test_lib
 kwiver_discover_gtests(vital iqr_feedback                   LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital iterable                       LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital iterator                       LIBRARIES ${test_libraries})
+kwiver_discover_gtests(vital local_geo_cs                   LIBRARIES ${test_libraries} ARGUMENTS "${kwiver_test_data_directory}")
 kwiver_discover_gtests(vital local_cartesian                LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital metadata                       LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital metadata_io                    LIBRARIES ${test_libraries} ARGUMENTS "${kwiver_test_data_directory}")
