Rename remove_ with color_
remove_occluded -> color_occluded
remove_maked -> color_masked

--- a/config/applets/color_mesh.conf
+++ b/config/applets/color_mesh.conf
@@ -17,11 +17,11 @@ all_frames = false
 # Default value is 1, bigger values will remove more points.
 occlusion_threshold = 1
 
-# Do not color occluded points if parameter is true.
-remove_occluded = true
+# Color occluded points if parameter is true.
+color_occluded = false
 
-# Do not color masked points if parameter is true.
-remove_masked = true
+# Color masked points if parameter is true.
+color_masked = false
 
 # Remove points that are not colored.
 remove_not_colored = false
