Replace not_colored with color_count_less_equal

--- a/config/applets/color_mesh.conf
+++ b/config/applets/color_mesh.conf
@@ -23,5 +23,5 @@ color_occluded = false
 # Color masked points if parameter is true.
 color_masked = false
 
-# Remove points that are not colored.
-remove_not_colored = false
+# Remove points that are colored with fewer or equal this number of frames.
+remove_color_count_less_equal = 0
