Added outline of tests for dump-klv and render-mesh

--- a/arrows/core/applets/CMakeLists.txt
+++ b/arrows/core/applets/CMakeLists.txt
@@ -20,6 +20,10 @@ set( headers
 # Add our plugin path to the default list
 include_directories( ${CMAKE_CURRENT_BINARY_DIR} )
 
+if (KWIVER_ENABLE_TESTS)
+  add_subdirectory(tests)
+endif()
+
 # Add applet plugin
 kwiver_add_plugin( kwiver_algo_core_applets
   SUBDIR       ${kwiver_plugin_applets_subdir}
