--- a/config/applets/dump_klv.conf
+++ b/config/applets/dump_klv.conf
@@ -2,5 +2,6 @@
 
 video_reader:type = ffmpeg
 video_reader:vidl_ffmpeg:time_source = misp
+metadata_serializer:type = csv
 
 image_writer:type = ocv
