Added check and config option for when to use CUDA

--- a/config/applets/fuse_depth.conf
+++ b/config/applets/fuse_depth.conf
@@ -1,5 +1,3 @@
-# Default configuration for the init_cameras_landmarks applet
+# Default configuration for the fuse-depth applet
 
-block integrate_depth_maps
-	include cuda_integrate_depth_maps.conf
-endblock
+use_gpu = true
