--- a/config/applets/init_cameras_landmarks.conf
+++ b/config/applets/init_cameras_landmarks.conf
@@ -1,4 +1,4 @@
-# Default configuration for the init_cameras_landmarks applet
+# Default configuration for the init-cameras-landmarks applet
 
 default_camera_config := default_camera_intrinsics.conf
 
