--- a/config/integrate_depth_maps_common.conf
+++ b/config/integrate_depth_maps_common.conf
@@ -1,13 +1,12 @@
-type = cuda
+# Default configuration for the "integrate_depth_maps" algorithm
+# The same parameters are used for both CPU (mvg) and GPU (cuda) versions
 
-block cuda
-  ray_potential_thickness = 3.0
-  ray_potential_rho = 1.0
-  ray_potential_eta = 1.0
-  ray_potential_delta = 10.0
-  grid_spacing = 1.0 1.0 1.0
-  voxel_spacing_factor = 2.0
-endblock
+ray_potential_thickness = 3.0
+ray_potential_rho = 1.0
+ray_potential_eta = 1.0
+ray_potential_delta = 10.0
+grid_spacing = 1.0 1.0 1.0
+voxel_spacing_factor = 2.0
 
 ##############################################################################
 #     Truncated Signed Distance Function (TSDF) Parameter Description        #
