--- a/test_data/config_files/fuse_depth_testing.conf
+++ b/test_data/config_files/fuse_depth_testing.conf
@@ -1,5 +1,1 @@
-# Default configuration for the init_cameras_landmarks applet
-
-block integrate_depth_maps
-	include cuda_integrate_depth_maps.conf
-endblock
+# Any overridden values for the configuration will be set here
