--- a/arrows/core/applets/tests/CMakeLists.txt
+++ b/arrows/core/applets/tests/CMakeLists.txt
@@ -10,4 +10,8 @@ add_test(NAME core:applets:render_mesh
             "${kwiver_test_data_directory}/pipeline_data/aphill_240_1fps_crf32_sm_fused_mesh.ply"
             "${kwiver_test_data_directory}/pipeline_data/krtd/aphill_240_1fps_crf32-00001.krtd"
             output_image)
+add_test(NAME core:applets:transcode
+  COMMAND kwiver transcode
+            --input "${kwiver_test_data_directory}/videos/aphill_klv_10s.ts"
+            --output transcode_out.ts)
 
