--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,6 +126,18 @@ OPTION( KWIVER_ENABLE_C_BINDINGS               "Enable C bindings libraries" OFF
 CMAKE_DEPENDENT_OPTION( KWIVER_ENABLE_PYTHON   "Enable python code" OFF
   KWIVER_ENABLE_C_BINDINGS OFF )
 
+if (WIN32)
+  # Set default for python tests to OFF on windows for now
+  CMAKE_DEPENDENT_OPTION( KWIVER_ENABLE_PYTHON_TESTS "Enable python tests" OFF
+    "KWIVER_ENABLE_PYTHON; KWIVER_ENABLE_TESTS" OFF )
+  if (KWIVER_ENABLE_PYTHON_TESTS)
+    message( WARNING "Python tests are not currently supported for Windows." )
+  endif()
+else()
+  CMAKE_DEPENDENT_OPTION( KWIVER_ENABLE_PYTHON_TESTS "Enable python tests" ON
+    "KWIVER_ENABLE_PYTHON; KWIVER_ENABLE_TESTS" OFF )
+endif()
+
 if (KWIVER_ENABLE_SERIALIZE_PROTOBUF)
   if (WIN32)
     message( WARNING "Protobuf serialization not supported for windows. Being disabled." )
