--- a/python/kwiver/sprokit/CMakeLists.txt
+++ b/python/kwiver/sprokit/CMakeLists.txt
@@ -14,6 +14,6 @@ if(NOT WIN32)
   add_subdirectory(util)
 endif()
 
-if(PYTHON_TEST AND NOT SKBUILD AND NOT WIN32)
+if(KWIVER_ENABLE_PYTHON_TESTS AND NOT SKBUILD)
   add_subdirectory(tests)
 endif()
