--- a/python/kwiver/vital/CMakeLists.txt
+++ b/python/kwiver/vital/CMakeLists.txt
@@ -17,7 +17,7 @@ add_subdirectory( algo )
 add_subdirectory( exceptions )
 add_subdirectory( types )
 
-if(PYTHON_TEST AND NOT WIN32)
+if(KWIVER_ENABLE_PYTHON_TESTS)
   add_subdirectory( tests )
 endif()
 
