--- a/.uncrustify.cfg
+++ b/.uncrustify.cfg
@@ -174,8 +174,8 @@ sp_after_new                    = force
 sp_between_new_paren            = force
 sp_after_newop_paren            = force
 sp_inside_newop_paren           = force
-sp_before_tr_emb_cmt            = add
-sp_num_before_tr_emb_cmt        = 1
+sp_before_tr_cmt                = add
+sp_num_before_tr_cmt            = 1
 sp_skip_vbrace_tokens           = false
 sp_after_noexcept               = remove
 
@@ -206,7 +206,7 @@ indent_ctor_init                = 0
 indent_else_if                  = false
 indent_var_def_blk              = 0
 indent_var_def_cont             = false
-indent_shift                    = false
+indent_shift                    = 0
 indent_func_def_force_col1      = false
 indent_func_call_param          = false
 indent_func_def_param           = false
@@ -219,7 +219,8 @@ indent_func_const               = 0
 indent_func_throw               = 0
 indent_member                   = 2
 indent_member_single            = true
-indent_sing_line_comments       = 0
+#indent_sing_line_comments       = 0
+indent_single_line_comments_before = 0
 indent_relative_single_line_comments = false
 indent_switch_case              = 2
 indent_switch_pp                = true
@@ -231,7 +232,7 @@ indent_access_spec              = -2
 indent_access_spec_body         = false
 indent_paren_nl                 = false
 indent_paren_close              = 0
-indent_bool_paren               = false
+indent_bool_paren               = 0
 indent_square_nl                = false
 indent_align_assign             = true
 indent_align_paren              = true
@@ -529,7 +530,7 @@ pp_ignore_define_body           = false
 pp_indent_case                  = true
 pp_indent_func_def              = true
 pp_indent_extern                = true
-pp_indent_brace                 = true
+pp_indent_brace                 = 1
 
 # Use or Do not Use options
 use_indent_func_call_param      = true
