--- a/python/kwiver/sprokit/processes/pytorch/CMakeLists.txt
+++ b/python/kwiver/sprokit/processes/pytorch/CMakeLists.txt
@@ -9,17 +9,13 @@ kwiver_add_python_module( ${CMAKE_CURRENT_SOURCE_DIR}/srnn_tracker.py
   sprokit/processes/pytorch
   srnn_tracker )
 
-kwiver_add_python_module( ${CMAKE_CURRENT_SOURCE_DIR}/resnet_descriptors.py
+kwiver_add_python_module( ${CMAKE_CURRENT_SOURCE_DIR}/pytorch_descriptors.py
   sprokit/processes/pytorch
-  resnet_descriptors )
+  pytorch_descriptors )
 
 kwiver_add_python_module( ${CMAKE_CURRENT_SOURCE_DIR}/resnet_augmentation.py
   sprokit/processes/pytorch
   resnet_augmentation )
-
-kwiver_add_python_module( ${CMAKE_CURRENT_SOURCE_DIR}/alexnet_descriptors.py
-  sprokit/processes/pytorch
-  alexnet_descriptors )
 
 if( KWIVER_ENABLE_PYTORCH_PYSOT )
   kwiver_add_python_module( ${CMAKE_CURRENT_SOURCE_DIR}/pysot_tracker.py
