--- a/python/kwiver/sprokit/processes/pytorch/utils/CMakeLists.txt
+++ b/python/kwiver/sprokit/processes/pytorch/utils/CMakeLists.txt
@@ -5,7 +5,7 @@ kwiver_add_python_module( ${CMAKE_CURRENT_SOURCE_DIR}/__init__.py
   sprokit/processes/pytorch/utils
   __init__ )
 
-kwiver_add_python_module( ${CMAKE_CURRENT_SOURCE_DIR}/efficientnet_feature_extractor.py
+kwiver_add_python_module( ${CMAKE_CURRENT_SOURCE_DIR}/enet_feature_extractor.py
   sprokit/processes/pytorch/utils
   efficientnet_feature_extractor )
 
