Add raw video/metadata transfer structure

--- a/vital/CMakeLists.txt
+++ b/vital/CMakeLists.txt
@@ -160,6 +160,8 @@ set( vital_public_headers
   types/transform_2d.h
   types/uid.h
   types/vector.h
+  types/video_raw_image.h
+  types/video_raw_metadata.h
   types/video_settings.h
 )
 
@@ -224,6 +226,8 @@ set( vital_sources
   types/track.cxx
   types/track_descriptor.cxx
   types/track_set.cxx
+  types/video_raw_image.cxx
+  types/video_raw_metadata.cxx
   types/video_settings.cxx
   types/uid.cxx
 )
