Added new vital type for point clouds
Added a new vital type to support using point cloud data in
kwiver. Currently supports color and intensity data at the
points in a point cloud.

--- a/vital/CMakeLists.txt
+++ b/vital/CMakeLists.txt
@@ -144,6 +144,7 @@ set( vital_public_headers
   types/metadata_traits.h
   types/object_track_set.h
   types/point.h
+  types/pointcloud.h
   types/polygon.h
   types/query_result.h
   types/query_result_set.h
@@ -217,6 +218,7 @@ set( vital_sources
   types/metadata_traits.cxx
   types/object_track_set.cxx
   types/point.cxx
+  types/pointcloud.cxx
   types/polygon.cxx
   types/query_result.cxx
   types/rotation.cxx
