--- a/arrows/ffmpeg/CMakeLists.txt
+++ b/arrows/ffmpeg/CMakeLists.txt
@@ -37,6 +37,7 @@ kwiver_install_headers(
   )
 
 set(ffmpeg_sources
+  ffmpeg_cuda.cxx
   ffmpeg_init.cxx
   ffmpeg_util.cxx
   ffmpeg_video_input.cxx
@@ -45,6 +46,11 @@ set(ffmpeg_sources
   ffmpeg_video_raw_metadata.cxx
   ffmpeg_video_settings.cxx
   )
+
+if(KWIVER_ENABLE_CUDA)
+  add_compile_definitions(KWIVER_ENABLE_FFMPEG_CUDA)
+  set(FFMPEG_CUDA_LIBRARIES cuda)
+endif()
 
 kwiver_add_library( kwiver_algo_ffmpeg
   ${ffmpeg_headers_public}
@@ -68,6 +74,7 @@ endif()
 target_link_libraries( kwiver_algo_ffmpeg
   PUBLIC               vital_algo
   PRIVATE              kwiver_algo_klv kwiversys
+                       ${FFMPEG_CUDA_LIBRARIES}
                        ${FFMPEG_LIBRARIES}
                        ${ZLIB_LIBRARIES}
   )
