--- a/python/kwiver/vital/plugins/CMakeLists.txt
+++ b/python/kwiver/vital/plugins/CMakeLists.txt
@@ -1,6 +1,7 @@
 set( THIS_MODULE vital/plugins )
 
 kwiver_add_python_module( ${CMAKE_CURRENT_SOURCE_DIR}/__init__.py "${THIS_MODULE}" __init__ )
+kwiver_add_python_module( ${CMAKE_CURRENT_SOURCE_DIR}/discovery.py "${THIS_MODULE}" discovery )
 
 ################################################################################
 # Python Module Library: _pluggable
@@ -13,6 +14,10 @@ kwiver_add_python_library(
 )
 ################################################################################
 # Plugin library
+#
+# This library provides the hooks into Python interpreter land to register a
+# number of factories for python implementations discovered.
+#
 kwiver_add_plugin(
   plugins_from_python
   SOURCES   register.cxx
