--- a/python/kwiver/vital/test_interface/CMakeLists.txt
+++ b/python/kwiver/vital/test_interface/CMakeLists.txt
@@ -1,6 +1,8 @@
 set( THIS_MODULE vital/test_interface )
 
 kwiver_add_python_module( ${CMAKE_CURRENT_SOURCE_DIR}/__init__.py "${THIS_MODULE}" __init__ )
+# TODO: Move this impl to a separate example python package.
+kwiver_add_python_module( ${CMAKE_CURRENT_SOURCE_DIR}/python_say.py "${THIS_MODULE}" python_say )
 
 ################################################################################
 # Python Module Library: _interface
