--- a/arrows/klv/tests/CMakeLists.txt
+++ b/arrows/klv/tests/CMakeLists.txt
@@ -32,3 +32,4 @@ kwiver_discover_gtests( klv klv_1303            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_1601            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_1602            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_1607            LIBRARIES ${test_libraries} )
+kwiver_discover_gtests( klv update_klv          LIBRARIES ${test_libraries} )
