Add apply_child_klv metadata filter

--- a/arrows/klv/CMakeLists.txt
+++ b/arrows/klv/CMakeLists.txt
@@ -3,6 +3,7 @@
 set(CMAKE_FOLDER "Arrows/KLV")
 
 set( sources
+  apply_child_klv.cxx
   klv_blob.cxx
   klv_checksum.cxx
   klv_convert_vital.cxx
@@ -57,6 +58,7 @@ set( sources
   )
 
 set( public_headers
+  apply_child_klv.h
   klv_all.h
   klv_blob.h
   klv_demuxer.h
@@ -140,6 +142,12 @@ target_link_libraries( kwiver_algo_klv
   PRIVATE       vital
                 vital_logger
   )
+
+
+algorithms_create_plugin( kwiver_algo_klv
+  register_algorithms.cxx
+  )
+
 
 if (KWIVER_ENABLE_TESTS)
   add_subdirectory( tests )
