--- a/arrows/klv/tests/CMakeLists.txt
+++ b/arrows/klv/tests/CMakeLists.txt
@@ -10,6 +10,7 @@ set( test_libraries kwiver_algo_core kwiver_algo_klv vital )
 # KLV tests
 ##############################
 
+kwiver_discover_gtests( klv apply_child_klv     LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_blob            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_checksum        LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_demuxer         LIBRARIES ${test_libraries} )
