Add input tests using new videos

--- a/arrows/ffmpeg/tests/CMakeLists.txt
+++ b/arrows/ffmpeg/tests/CMakeLists.txt
@@ -11,3 +11,12 @@ set(test_libraries     kwiver_algo_ffmpeg kwiver_algo_core)
 ##############################
 kwiver_discover_gtests(ffmpeg video_input_ffmpeg  LIBRARIES ${test_libraries} ARGUMENTS "${kwiver_test_data_directory}")
 kwiver_discover_gtests(ffmpeg video_output_ffmpeg LIBRARIES ${test_libraries} ARGUMENTS "${kwiver_test_data_directory}")
+
+if( KWIVER_ENABLE_SERIALIZE_JSON )
+  kwiver_discover_gtests(ffmpeg video_input_ffmpeg_klv
+    LIBRARIES
+      ${test_libraries}
+      kwiver_serialize_json_klv
+      kwiver_algo_klv
+    ARGUMENTS "${kwiver_test_data_directory}")
+endif()
