Fix Powershell setup script

--- a/CMake/setup_KWIVER.ps1.in
+++ b/CMake/setup_KWIVER.ps1.in
@@ -2,17 +2,17 @@
 # Script to source to setup the KWIVER environment
 #
 
-if ( $args[1] -eq "" ) {
-  $config = @CMAKE_BUILD_TYPE@
- } else {
-  $config = $args[1]
- }
+if ( "$($args[0])" -eq "" ) {
+  $config = "@CMAKE_BUILD_TYPE@"
+} else {
+  $config = $args[0]
+}
 
 $this_dir = Split-Path -Path $MyInvocation.MyCommand.Path
 
-$ENV:PATH = "$this_dir/bin/$config;$this_dir/lib/$config/@kwiver_plugin_module_subdir@;$this_dir/lib/$config/@kwiver_plugin_process_subdir@;$this_dir/lib/$config/@kwiver_plugin_algorithms_subdir@;@EXTRA_WIN32_PATH@;$ENV:PATH"
+$ENV:PATH = "$this_dir/bin/$config;$this_dir/Lib/$config/@kwiver_plugin_module_subdir@;$this_dir/Lib/$config/@kwiver_plugin_process_subdir@;$this_dir/Lib/$config/@kwiver_plugin_algorithms_subdir@;@EXTRA_WIN32_PATH@;$ENV:PATH"
 
-$ENV:KWIVER_PLUGIN_PATH = "$this_dir/lib/%config%/@kwiver_plugin_subdir@"
+$ENV:KWIVER_PLUGIN_PATH = "$this_dir/Lib/$config/@kwiver_plugin_subdir@"
 
 $ENV:KWIVER_CONFIG_PATH = "$this_dir/share/kwiver/@KWIVER_VERSION@/config"
 
