--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,9 @@ mark_as_advanced(KWIVER_DEFAULT_LIBRARY_DIR)
 set(KWIVER_CONFIG_FILE          "${KWIVER_BINARY_DIR}/kwiver-config.cmake")
 
 if(CMAKE_CXX_COMPILER_ID MATCHES MSVC)
-  if(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 19.20)
+  if(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 19.30)
+    set(_vcVersion vc17)
+  elseif(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 19.20)
     set(_vcVersion vc16)
   elseif(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 19.10)
     set(_vcVersion vc15)
