--- a/vital/tests/CMakeLists.txt
+++ b/vital/tests/CMakeLists.txt
@@ -31,7 +31,7 @@ kwiver_discover_gtests(vital class_map                      LIBRARIES ${test_lib
 kwiver_discover_gtests(vital enumerate_matrix               LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital essential_matrix               LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital estimate_similarity_transform  LIBRARIES ${test_libraries})
-kwiver_discover_gtests(vital file_md5                       LIBRARIES ${test_libraries} ARGUMENTS "${kwiver_test_data_directory}/rpc_data/rpc_data.dat" "a04bf5b37758551864c93663c26f63b0" )
+kwiver_discover_gtests(vital file_md5                       LIBRARIES ${test_libraries} ARGUMENTS "${kwiver_test_data_directory}/video_as_images/images/frame_0001.png" "2764c96ee5d3830277313ffb91d343ae" )
 kwiver_discover_gtests(vital fundamental_matrix             LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital geo_MGRS                       LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital geo_point                      LIBRARIES ${test_libraries})
