--- a/arrows/serialize/protobuf/CMakeLists.txt
+++ b/arrows/serialize/protobuf/CMakeLists.txt
@@ -1,7 +1,10 @@
 # Build / Install plugin for serialization
 
 find_package(Protobuf MODULE REQUIRED)
-find_package(ZLIB MODULE REQUIRED)
+
+if(NOT KWIVER_ENABLE_ZLIB)
+  message(FATAL_ERROR "Protobuf serialization requires zlib (KWIVER_ENABLE_ZLIB)")
+endif()
 include_directories( ${ZLIB_INCLUDE_DIRS} )
 
 if(NOT PROTOBUF_FOUND)
