Consistently use kwiver_sitename

--- a/python/kwiver/sprokit/tests/CMakeLists.txt
+++ b/python/kwiver/sprokit/tests/CMakeLists.txt
@@ -14,7 +14,7 @@ if (SPROKIT_ENABLE_COVERAGE_PYTHON)
     "${PYTHON_EXECUTABLE}"
     -m trace
     --count
-    --coverdir "${python_install_path}/${kwiver_python_subdir}/${python_sitename}/${project_name}")
+    --coverdir "${python_install_path}/${kwiver_python_subdir}/${kwiver_sitename}/${project_name}")
 else ()
   set(kwiver_test_runner
     "${PYTHON_EXECUTABLE}")
