Initial work on python version of demo script
Initial work on python version of demo script. This also includes
initial python bindings for plugin manager.

--- a/python/kwiver/vital/CMakeLists.txt
+++ b/python/kwiver/vital/CMakeLists.txt
@@ -1,5 +1,6 @@
 kwiver_add_python_module( ${CMAKE_CURRENT_SOURCE_DIR}/__init__.py "vital" __init__ )
 
 add_subdirectory( config )
+add_subdirectory( plugin_management )
 add_subdirectory( plugins )
 add_subdirectory( test_interface )
