Added new demo tool to run config formatting
Added new demo tool that runs the various config formatting
implementations on a sample config file. Will be used to test
the formatters still work after refactoring to use the
macro magic.

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,3 +1,9 @@
+kwiver_add_executable( demo_macro_magic demo_macro_magic.cxx )
+target_link_libraries(
+  demo_macro_magic
+  PRIVATE   vital
+)
+
 kwiver_add_executable( demo_python_impl_call demo_python_impl_call.cxx )
 target_link_libraries(
   demo_python_impl_call
