--- a/vital/util/tests/CMakeLists.txt
+++ b/vital/util/tests/CMakeLists.txt
@@ -17,6 +17,9 @@ kwiver_discover_gtests(vital interval_map       LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital string             LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital string_editor      LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital string_encoding    LIBRARIES ${test_libraries})
+kwiver_discover_gtests(vital text_codec_ascii   LIBRARIES ${test_libraries})
+kwiver_discover_gtests(vital text_codec_utf_8   LIBRARIES ${test_libraries})
+kwiver_discover_gtests(vital text_codec_utf_16  LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital thread_pool        LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital timer              LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital token_expander     LIBRARIES ${test_libraries})
