--- a/vital/util/tests/CMakeLists.txt
+++ b/vital/util/tests/CMakeLists.txt
@@ -10,17 +10,18 @@ set( test_libraries vital vital_vpm kwiversys )
 # Util tests
 ##############################
 
-kwiver_discover_gtests(vital any_converter      LIBRARIES ${test_libraries})
-kwiver_discover_gtests(vital data_stream_reader LIBRARIES ${test_libraries})
-kwiver_discover_gtests(vital interval           LIBRARIES ${test_libraries})
-kwiver_discover_gtests(vital interval_map       LIBRARIES ${test_libraries})
-kwiver_discover_gtests(vital string             LIBRARIES ${test_libraries})
-kwiver_discover_gtests(vital string_editor      LIBRARIES ${test_libraries})
-kwiver_discover_gtests(vital string_encoding    LIBRARIES ${test_libraries})
-kwiver_discover_gtests(vital text_codec_ascii   LIBRARIES ${test_libraries})
-kwiver_discover_gtests(vital text_codec_utf_8   LIBRARIES ${test_libraries})
-kwiver_discover_gtests(vital text_codec_utf_16  LIBRARIES ${test_libraries})
-kwiver_discover_gtests(vital thread_pool        LIBRARIES ${test_libraries})
-kwiver_discover_gtests(vital timer              LIBRARIES ${test_libraries})
-kwiver_discover_gtests(vital token_expander     LIBRARIES ${test_libraries})
-kwiver_discover_gtests(vital visit              LIBRARIES ${test_libraries})
+kwiver_discover_gtests(vital any_converter        LIBRARIES ${test_libraries})
+kwiver_discover_gtests(vital data_stream_reader   LIBRARIES ${test_libraries})
+kwiver_discover_gtests(vital interval             LIBRARIES ${test_libraries})
+kwiver_discover_gtests(vital interval_map         LIBRARIES ${test_libraries})
+kwiver_discover_gtests(vital string               LIBRARIES ${test_libraries})
+kwiver_discover_gtests(vital string_editor        LIBRARIES ${test_libraries})
+kwiver_discover_gtests(vital string_encoding      LIBRARIES ${test_libraries})
+kwiver_discover_gtests(vital text_codec_ascii     LIBRARIES ${test_libraries})
+kwiver_discover_gtests(vital text_codec_transcode LIBRARIES ${test_libraries})
+kwiver_discover_gtests(vital text_codec_utf_8     LIBRARIES ${test_libraries})
+kwiver_discover_gtests(vital text_codec_utf_16    LIBRARIES ${test_libraries})
+kwiver_discover_gtests(vital thread_pool          LIBRARIES ${test_libraries})
+kwiver_discover_gtests(vital timer                LIBRARIES ${test_libraries})
+kwiver_discover_gtests(vital token_expander       LIBRARIES ${test_libraries})
+kwiver_discover_gtests(vital visit                LIBRARIES ${test_libraries})
