--- a/arrows/klv/CMakeLists.txt
+++ b/arrows/klv/CMakeLists.txt
@@ -154,7 +154,9 @@ algorithms_create_plugin( kwiver_algo_klv
   register_algorithms.cxx
   )
 
+if (KWIVER_ENABLE_TOOLS)
   add_subdirectory(applets)
+endif()
 
 if (KWIVER_ENABLE_TESTS)
   add_subdirectory( tests )
